[package]
name = "sessao-core"
description = "Core abstractions and session types for Sessão"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true

[features]
default = []
serde = ["dep:serde"]
